[tool.poetry]
name = "sgtbonsaibot-v20"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
e = "^1.4.5"
flask = "^1.1.2"
youtube-dl = "^2021.2.10"
django-tango = "^0.10.0"
feedparser = "^6.0.2"
pyally = "^1.1.2"
tabulate = "^0.8.9"
python-dotenv = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
